--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ title: Jason's Blog
 theme:
 plugins:
 
+baseurl: blog
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
