set permalink and remove minima dependency

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ baseurl: "/blog"
 theme:
 plugins:
 
+permalink: /:year/:month/:day/:title:output_ext
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -32,6 +34,7 @@ plugins:
 #
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
+#
 #
 exclude:
     - Session.vim
